--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "babel-loader": "^8.2.2",
     "lerna": "^4.0.0"
@@ -18,5 +19,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {}
+  "dependencies": {
+    "css-loader": "^5.2.4",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0"
+  }
 }
