--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -23,6 +23,9 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "css-loader": "^5.2.4",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.1.1",
     "webpack": "^5.35.1"
   }
