--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,18 +17,11 @@
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
-    "build": "unicorn-builder",
+    "build": "webpack --config ../../webpack.config.js",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.32.11",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@unicorn-ui/builder": "^0.0.1"
+    "react-dom": "^17.0.2"
   }
 }
