--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.13.16",
+    "@babel/core": "^7.14.0",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/builder-webpack5": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.2.2",
-    "lerna": "^4.0.0"
+    "css-loader": "^5.2.4",
+    "lerna": "^4.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0"
   },
   "workspaces": [
     "packages/*"
@@ -20,8 +27,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "css-loader": "^5.2.4",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0"
+    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.32.12",
+    "webpack-node-externals": "^3.0.0"
   }
 }
