--- a/packages/unicorn/package.json
+++ b/packages/unicorn/package.json
@@ -21,23 +21,15 @@
     "url": "git+https://github.com/lzj822/unicorn-ui.git"
   },
   "scripts": {
-    "build": "unicorn-builder",
+    "build": "webpack --config ../../webpack.config.js",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/lzj822/unicorn-ui/issues"
   },
   "dependencies": {
-    "@unicorn-ui/button": "^0.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.32.11",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4"
+    "@unicorn-ui/button": "^0.0.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@unicorn-ui/builder": "^0.0.1"
   }
 }
